# The-Ethos-Aegis

./: .gitignore  Cargo.toml  README.md  SECURITY.md  adjudicate.test.js  aegis.py  ai-agent-fix.yml  architecture.md  client.go  client_test.go  demo.py  ethos_aegis_downloader.html.txt  go.mod  index.js  integration.rs  lib.rs  package.json  protocol.py  run_tests.sh  setup.py  test_suite.py  text.txt  vault.py
.github/: dependabot.yml
scripts/: ai_agent.py  requirements.txt
